# solder-cortex

./: API.md  Cargo.toml  DEMO.md  Dockerfile  README.md  docker-compose.yml  openapi.yaml
.github/workflows/: deploy.yml
config/: default.toml
contracts/solder-dao/: Anchor.toml
contracts/solder-dao/programs/solder-dao/: Cargo.toml
contracts/solder-dao/programs/solder-dao/src/: lib.rs
contracts/solder-dao/tests/: solder-dao.ts
crates/cortex-core/: Cargo.toml
crates/cortex-core/src/: agentdex.rs  conviction.rs  error.rs  lib.rs  models.rs
crates/cortex-mcp/: Cargo.toml
crates/cortex-mcp-unified/: Cargo.toml
crates/cortex-mcp/src/: main.rs
crates/cortex-prediction-mcp/: Cargo.toml
crates/cortex-prediction-mcp/src/: cache.rs  config.rs  error.rs  main.rs  tools.rs
crates/cortex-prediction-mcp/src/db/: mod.rs  models.rs  queries.rs
crates/cortex-server/: Cargo.toml
crates/cortex-server/src/: config.rs  error.rs
crates/cortex-server/src/api/: dto.rs
crates/cortex-server/src/db/: mod.rs  queries.rs
crates/cortex-server/src/indexer/protocols/: jupiter.rs  mod.rs  raydium.rs
crates/cortex-server/src/metrics/: mod.rs
crates/cortex-unified-mcp/: Cargo.toml  README.md
crates/cortex-unified-mcp/src/: config.rs  defi.rs  error.rs  main.rs  polymarket.rs  prediction.rs  tools.rs
dashboard/: README.md  index.html
docs/: ARCHITECTURE.md
docs/pitch/: README.md  package.json  slides.md
migrations/: 001_init.sql  002_prediction_markets.sql
scripts/: demo.sh
src/: main.rs  types.rs
src/api/: handlers.rs  mod.rs
src/db/: models.rs
src/indexer/: helius.rs  lyslabs.rs  mod.rs  parser.rs
src/indexer/protocols/: kamino.rs
src/metrics/: pnl.rs  risk.rs
website/: README.md  index.html  package-lock.json  vite.config.js
website/src/: main.js  style.css
