[package]
name = "cortex-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Unified data models and types for Solder Cortex - The Memory Layer for AI Agents"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
