[package]
name = "cortex-mcp"
version = "0.1.0"
edition = "2021"
description = "Solder Cortex MCP Server - Model Context Protocol interface for Cortex"
license = "MIT"

[[bin]]
name = "cortex-mcp"
path = "src/main.rs"

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (sync, for MCP simplicity)
ureq = { version = "2", features = ["json"] }
