[package]
name = "cortex-unified-mcp"
version = "0.2.0"
edition = "2021"
description = "Solder Cortex Unified MCP Server - Cross-domain intelligence for AI agents"
license = "MIT"
authors = ["Solder Cortex Team"]

[[bin]]
name = "cortex-mcp"
path = "src/main.rs"

[dependencies]
# Core library
cortex-core = { path = "../cortex-core" }

# Async runtime
tokio = { version = "1", features = ["full", "sync"] }

# Clickhouse (for prediction market data)
clickhouse = { version = "0.13", features = ["lz4"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.14"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Caching
moka = { version = "0.12", features = ["future"] }

# HTTP client (for DeFi API calls)
reqwest = { version = "0.12", features = ["json"] }
